gtk/gtkentry.c
@@ -9607,7 +9607,10 @@ gtk_entry_completion_changed (GtkWidget *entry,
 
   /* (re)install completion timeout */
   if (completion->priv->completion_timeout)
-    g_source_remove (completion->priv->completion_timeout);
+    {
+      g_source_remove (completion->priv->completion_timeout);
+      completion->priv->completion_timeout = 0;
+    }
 
   if (!gtk_entry_get_text (GTK_ENTRY (entry)))
     return;
